<resources>
    <string name="app_name">BWAMov</string>
    <string name="now_playing">Now Playing</string>
    <string name="desc_1">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="desc_2">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="desc_3">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="memulai">Memulai</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="photo">Photo</string>
    <string name="simpan_dan_lanjutkan">Simpan Dan Lanjutkan</string>
    <string name="upload_nanti">Upload Nanti</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="title">Title</string>
    <string name="genre">genre</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="batalkan">Batalkan</string>
    <string name="cinema">Cinema</string>
    <string name="total_balance">Total Balance</string>
    <string name="_12_aug_10_am">12 Aug, 10 AM</string>
    <string name="depok_mall_cinema_3">Depok Mall, Cinema 3</string>
    <string name="items">Items</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="home">Home</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="happy_watching">Happy Watching</string>
    <string name="desc_4">Tiket telah berhasil dibeli dan\nselamat menikmati film</string>
    <string name="avengers">Avengers</string>
    <string name="action_sci_fi_kids">Action, Sci-fi, Kids</string>
    <string name="storyboard">Storyboard</string>
    <string name="Story">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos.</string>
    <string name="who_s_played">Who\'s Played</string>
    <string name="beli_tiket">Beli Tiket</string>
</resources>